# test_opengl_init

./: CMakeLists.txt  main.cpp  main_1_1_triangle.cpp  main_1_2_multi_shader.cpp  main_1_3_gsls.cpp  main_1_4_texture.cpp  main_1_5_geometry.cpp  main_empty.cpp
camera/: camera.h
shader/: shader.cpp  shader.h  shader_fragment.fs  shader_fragment_1_4.fs  shader_fragment_1_6.fs  shader_vertex.vs  shader_vertex_1_4.vs  shader_vertex_1_5.vs  shader_vertex_1_6.vs
texture/: texture.h
